found issue on iOS device, buttons visualization

--- a/styles.css
+++ b/styles.css
@@ -707,6 +707,7 @@ padding-left: 0.5rem;
   font-size: 30px;
   background: transparent;
   border: 1px solid transparent;
+  border: 1px solid red;
 }
 
 /* #buttonsContainer>button:active {
